# fpg-kickoff

./: .gitignore  README.md  pyproject.toml
fpg_kickoff/: deterministic.py  deterministic_call.py  deterministic_call_se.py  deterministic_se.py  inculpable.py  inculpable_nuc_se.py  inculpable_se.py  incumpable.py  incumpable_se.py  random_server.py  total_maybe.py  total_none.py  total_se.py
tests/: test_fpg_kickoff.py
